signup form done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Polannews"
         tools:targetApi="31">
         <activity
+            android:name=".signUpFormActivity"
+            android:exported="false" />
+        <activity
             android:name=".onBoardingOneActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -22,14 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
-
-
-
+            android:exported="false" />
     </application>
 
 </manifest>
